--- a/vnc/Dockerfile
+++ b/vnc/Dockerfile
@@ -1,1 +1,4 @@
 FROM gitpod/workspace-full-vnc
+RUN apt-get update \
+    && apt-get install -y libx11-dev libxkbfile-dev libsecret-1-dev libgconf2-4 libnss3 libgtk-3-dev libasound2-dev twm \
+    && apt-get clean && rm -rf /var/cache/apt/* && rm -rf /var/lib/apt/lists/* && rm -rf /tmp/*
